--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.30",
     "@types/supertest": "^6.0.2",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
   }
